Clarified the purpose of the class archive

--- a/css/default.css
+++ b/css/default.css
@@ -602,8 +602,13 @@ div.flex-gallery {
 }
 
 /* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\  *
- * Archived stylesheets | PRESENT FOR ARCHIVAL PURPOSES
- * \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/  */
+ * Archived stylesheets
+ * \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/  *
+ * 
+ * These are only present down here for archival purposes. I'll prolly comment
+ * them out later.
+ * 
+ */
 
 /* Image borders */
 img.border {
