--- a/css/default.css
+++ b/css/default.css
@@ -90,7 +90,7 @@ p.caption {
 p.coming-soon {
     text-align: center;
     font-size: 10.67em;
-    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro W6:, 'Noto Serif CJK JP', 'ＭＳ 明朝', 'MS Mincho', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro W6', 'Noto Serif CJK JP', 'ＭＳ 明朝', 'MS Mincho', 'Noto Serif JP', serif;
 }
 
 /* Pride heading */
