--- a/css/bizyutukan.css
+++ b/css/bizyutukan.css
@@ -10,130 +10,6 @@
  */
 
 /* NSFW :3 */
-div#nsfw0 {
-    display: none;
-}
-
-div#nsfw1 {
-    display: none;
-}
-
-div#nsfw2 {
-    display: none;
-}
-
-div#nsfw3 {
-    display: none;
-}
-
-div#nsfw4 {
-    display: none;
-}
-
-div#nsfw5 {
-    display: none;
-}
-
-div#nsfw6 {
-    display: none;
-}
-
-div#nsfw7 {
-    display: none;
-}
-
-div#nsfw8 {
-    display: none;
-}
-
-div#nsfw9 {
-    display: none;
-}
-
-div#nsfw10 {
-    display: none;
-}
-
-div#nsfw11 {
-    display: none;
-}
-
-div#nsfw12 {
-    display: none;
-}
-
-div#nsfw13 {
-    display: none;
-}
-
-div#nsfw14 {
-    display: none;
-}
-
-div#nsfw15 {
-    display: none;
-}
-
-div#nsfw16 {
-    display: none;
-}
-
-div#nsfw17 {
-    display: none;
-}
-
-div#nsfw18 {
-    display: none;
-}
-
-div#nsfw19 {
-    display: none;
-}
-
-div#nsfw20 {
-    display: none;
-}
-
-div#nsfw21 {
-    display: none;
-}
-
-div#nsfw22 {
-    display: none;
-}
-
-div#nsfw23 {
-    display: none;
-}
-
-div#nsfw24 {
-    display: none;
-}
-
-div#nsfw25 {
-    display: none;
-}
-
-div#nsfw26 {
-    display: none;
-}
-
-div#nsfw27 {
-    display: none;
-}
-
-div#nsfw28 {
-    display: none;
-}
-
-div#nsfw29 {
-    display: none;
-}
-
-div#nsfw30 {
-    display: none;
-}
-
-div#nsfw31 {
+div.nsfw {
     display: none;
 }
