Got the NSFW toggle actually working now; Added noNsfw() and nsfwNiceTry() functions

--- a/css/bizyutukan.css
+++ b/css/bizyutukan.css
@@ -13,3 +13,13 @@
 div.nsfw {
     display: none;
 }
+
+/* No NSFW */
+div#NoNsfw {
+    display: none;
+}
+
+/* YOU SICK FUCK!! */
+div#YouSickFuck {
+    display: none;
+}
