--- a/css/menu.css
+++ b/css/menu.css
@@ -42,7 +42,7 @@ a:link {
  */
 
 body {
-    font-family: 'ヒラギノ角ゴ Pro W3', 'Noto Sans JP', sans-serif;
+    font-family: 'ヒラギノ丸ゴ Pro W4', 'Hiragino Maru Gothic Pro', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'MS Gothic', 'Noto Sans JP', sans-serif;
     font-size: 1.19em;
     background-color: #121212;
     color: #e5e5e5;
@@ -58,7 +58,7 @@ body {
 /* Heading 1 */
 h1 {
     font-size: 2.63em;
-    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro', 'Noto Serif CJK JP', 'ＭＳ 明朝', 'MS Mincho', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -67,7 +67,7 @@ h1 {
 /* Heading 2 */
 h2 {
     font-size: 2.31em;
-    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro', 'Noto Serif CJK JP', 'ＭＳ 明朝', 'MS Mincho', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -76,7 +76,7 @@ h2 {
 /* Heading 3 */
 h3 {
     font-size: 2em;
-    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro', 'Noto Serif CJK JP', 'ＭＳ 明朝', 'MS Mincho', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -85,7 +85,7 @@ h3 {
 /* Heading 4 */
 h4 {
     font-size: 1.5em;
-    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
+    font-family: 'ヒラギノ角ゴ Pro W6', 'Hiragino Kaku Gothic Pro', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'MS Gothic', 'Noto Sans JP', sans-serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -94,7 +94,7 @@ h4 {
 /* Heading 5 */
 h5 {
     font-size: 1.31em;
-    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
+    font-family: 'ヒラギノ角ゴ Pro W6', 'Hiragino Kaku Gothic Pro', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'MS Gothic', 'Noto Sans JP', sans-serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
