Added font-family properties for the fictional language classes

--- a/css/default.css
+++ b/css/default.css
@@ -507,22 +507,27 @@ span.reflexive-pronoun {
 
 /* Frualbuqash */
 span.frualbuqash-language {
+    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
 }
 
 /* Ilbåsk (for both Spålméaakeln and Elesüükeln) */
 span.ilbask-language {
+    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
 }
 
 /* Neph */
 span.neph-language {
+    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
 }
 
 /* Praanbabi */
 span.praanbabi-language {
+    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
 }
 
 /* Uuptari */
 span.uuptari-language {
+    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
 }
 
 /* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\  *
