--- a/css/accordion.css
+++ b/css/accordion.css
@@ -14,7 +14,7 @@
     padding: 18px;
     width: 100%;
     text-align: center;
-    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
+    font-family: 'ヒラギノ角ゴ Std W8', 'Hiragino Kaku Gothic Std', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
     font-size: 2em;
     border: none;
     outline: none;
