Adjusted font-weight for class "p.pride-head"

--- a/css/default.css
+++ b/css/default.css
@@ -98,6 +98,7 @@ p.pride-head {
     text-align: center;
     font-size: 1.7em;
     font-family: 'ヒラギノ角ゴ Std W8', 'Hiragino Kaku Gothic Std', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'MS Gothic', 'Noto Sans JP', sans-serif;
+    font-weight: bold;
     color: #000000;
 }
 
