Updated index.css Added styling for Assamese text.

--- a/css/index.css
+++ b/css/index.css
@@ -359,6 +359,18 @@ span.armenian-romanization {
     font-family: 'Arimo', 'Linux Biolinum', 'Kurinto Sans', 'Arial', 'Noto Sans', sans-serif;
 }
 
+/* ------ Assamese / অসমীয়া / Asamiya ------ */
+
+/* অসমীয়া (Assamese Script) */
+span.assamese {
+    font-family: 'Kalpurush', 'Noto Sans Bengali', sans-serif;
+}
+
+/* Asamiya (romanisation) */
+span.assamese-romanization {
+    font-family: 'Arimo', 'Linux Biolinum', 'Kurinto Sans', 'Arial', 'Noto Sans', sans-serif;
+}
+
 /* ------ Burmese / မြန်မာဘာသာ / mranma bhasa ------ */
 
 /* မြန်မာဘာသာ (Burmese script) */
