Updated wiki.css Added header styling. Page title is now aligned to the left-hand side.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -1,3 +1,9 @@
+/* ====== Header ====== */
+header {
+    text-align: left;
+    font-family: 'Tinos', 'Times New Roman', 'Noto Serif Display', serif;
+}
+
 /* ====== Main body ====== */
 main {
     contain: content;
