--- a/css/wiki.css
+++ b/css/wiki.css
@@ -49,7 +49,7 @@ p#Japanese {}
 nav#Contents {
     float: left;
     font-family: 'Arimo', 'Linux Biolinum', 'Kurinto Sans', 'Arial', 'Noto Sans', sans-serif;
-    font-size: 1.15em;
+    font-size: 19px;
     max-width: 300px;
     margin-right: 16px;
 }
@@ -59,5 +59,5 @@ summary#ContentsDropdown {
 }
 
 a.contents-item {
-    font-size: 1.15em;
+    font-size: 19px;
 }
