--- a/css/wiki.css
+++ b/css/wiki.css
@@ -15,6 +15,8 @@ div#Infobox {
     float: right;
     border-style: groove;
     width: 280px;
+    margin: 16px;
+    padding: 4px;
 }
 
 /* ------ Title ------ */
