Updated wiki.css Turned the `Lead' section into a float containment chamber; in other words, it now contains the contents list.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -71,3 +71,8 @@ h2.section-title {
     text-align: left;
     font-family: 'Tinos', 'Times New Roman', 'Noto Serif', serif;
 }
+
+/* ====== Section styles ====== */
+section#Lead {
+    contain: content;
+}
