Fixed the infobox Redid the way the `Japanese name' and `Other names' sections of the infobox are displayed.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -36,15 +36,12 @@ img#MainImage {
     width: 256px;
 }
 
-/* ------ Japanese name ------ */
+/* ------ Infobox section names ------ */
 
-div#JapaneseName {}
-
-p#JapaneseNameTitle {
+span#JapaneseNameTitle,
+span#OtherNameTitle {
     font-weight: bold;
 }
-
-p#Japanese {}
 
 /* ====== Contents ====== */
 
